RESOLVED FIXED300477
REGRESSION (299603@main): Inset box-shadow not rendered when spread is larger than element
https://bugs.webkit.org/show_bug.cgi?id=300477
Summary REGRESSION (299603@main): Inset box-shadow not rendered when spread is larger...
Cameron Moon (cmrn)
Reported 2025-10-09 17:25:30 PDT
Created attachment 477036 [details] Screenshot of Safari TP 229 vs Safari 26.0.1 If an element has an inset-box shadow where the box-shadow-spread radius is equal to or larger than half the element's width or height, the shadow will not render. For example: ``` <div style=" width: 50px; height: 50px; background: pink; box-shadow: inset 0 0 0 25px purple; " ></div> ``` The above div is purple on Safari 26.0.1, but pink on Safari TP 229. Minimal reproduction: https://codesandbox.io/p/sandbox/fdhxc5 This regression has been observed in Safari Technology Preview 229 (WebKit 20623.1.9.1) as well as iOS 26.1 beta 2.
Attachments
Screenshot of Safari TP 229 vs Safari 26.0.1 (200.38 KB, image/png)
2025-10-09 17:25 PDT, Cameron Moon (cmrn)
no flags
Minimal reproduction (851 bytes, text/html)
2025-10-09 17:46 PDT, Cameron Moon (cmrn)
no flags
[fast-cq]Patch (3.40 KB, patch)
2025-10-17 10:54 PDT, alan
no flags
Cameron Moon (cmrn)
Comment 1 2025-10-09 17:46:22 PDT
Created attachment 477039 [details] Minimal reproduction
Simon Fraser (smfr)
Comment 2 2025-10-10 09:05:51 PDT
I fixed a variant of this via bug 298341, but apparently didn't fix it completely.
Radar WebKit Bug Importer
Comment 3 2025-10-10 09:07:37 PDT
Cameron Moon (cmrn)
Comment 4 2025-10-14 19:18:57 PDT
Thanks Simon. Yeah I saw that other bug which seemed related - I wondered if maybe that fix surfaced this bug? For context, at Canva this caused all our checkboxes to appear unchecked (since we used box-shadow as a fill). We've added a workaround in our first party code (using background-color instead), but third party apps in Canva are still affected. Keen to hear any progress - it would be great to get a fix in before iOS 26.1 is released to avoid a regression in a stable release.
alan
Comment 5 2025-10-17 10:54:08 PDT
Created attachment 477121 [details] [fast-cq]Patch
EWS
Comment 6 2025-10-17 13:19:52 PDT
Committed 301741@main (8b5fe77dc02b): <https://commits.webkit.org/301741@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477121 [details].
Note You need to log in before you can comment on or make changes to this bug.