REGRESSION (299603@main): Inset box-shadow not rendered when spread is larger than element https://bugs.webkit.org/show_bug.cgi?id=300477 <rdar://problem/162373297>

Reviewed by Simon Fraser.

When the inset shadow fully covers the box (i.e., the inner hole rect becomes zero),
we should paint the outer shape (the full rect) rather than the zero rect.
(Note that the inner rect is never the (inset) shadow itself).

Test: fast/box-shadow/inset-shadow-large-spread2.html

* LayoutTests/fast/box-shadow/inset-shadow-large-spread2-expected.html: Added.
* LayoutTests/fast/box-shadow/inset-shadow-large-spread2.html: Added.
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintBoxShadow const):

Canonical link: https://commits.webkit.org/301741@main